--- a/src/components/home/3_benefits/benefits.module.scss
+++ b/src/components/home/3_benefits/benefits.module.scss
@@ -35,7 +35,7 @@
 		margin-bottom: 6rem;
 
 		&:first-of-type {
-			margin-bottom: 6rem !important;
+			// margin-bottom: 6rem !important;
 		}
 
 		&:last-of-type {
